--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-VITE_API_URL=http://127.0.0.1:8000/api
-VITE_MIDTRANS_CLIENT_KEY=SB-Mid-client-YOUR_CLIENT_KEY
+VITE_API_URL=https://be-ac.amayones.my.id/api
+VITE_MIDTRANS_CLIENT_KEY=Mid-client-bod1K-k0ULwFgdoL
